@@ -313,6 +313,9 @@ Testsuite
 
 Changes
   * Added Windows support
+  
+Enhancements
+   * Added dielectric analysis module
 
 
 11/05/18 orbeckst, PicoCentauri, richardjgowers, zemanj
@@ -327,7 +330,7 @@ Fixes
    * Fixed reading PDB files with DOS line ending (#2128)
 
 Deprecations
-   * Default ``filename`` directory of align.AlignTraj is deprecated and 
+   * Default ``filename`` directory of align.AlignTraj is deprecated and
      will change in 1.0 to the current directory.
 
 10/09/18 tylerjereddy, richardjgowers, palnabarun, orbeckst, kain88-de, zemanj,
@@ -1899,7 +1902,7 @@ Testsuite
     MDAnalysisTestData package with a higher release number is available.
 
   Testsuite
-  
+
    * Split off test data trajectories and structures from
      MDAnalaysis/tests/data into separate package. (Issue 28)
    * Numbering matches the earliest MDAnalysis release for which the data is
